<resources>
    <string name="app_name">RideShare</string>
    <string name="login_header">Ride Sharing</string>
    <string name="login_btn">Sign in</string>
    <string name="create_btn">Create Account</string>
    <string name="register_ride_header">What\'s Your Ride Like?</string>
    <string name="pass_forgot">Forgot password ?</string>
    <string name="noaccount">Don\'t have an account ?</string>
    <string name="createaccount">Create a new account</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="tabian_consulting_logo">Tabian Consulting Logo</string>
    <string name="email_registration">Email Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="employee_dashboard">Employee Dashboard</string>
    <string name="this_week_s_initiatives">This week\'s initiatives</string>
    <string name="employee_schedule">Employee Schedule</string>
    <string name="company_culture">Company Culture</string>
    <string name="tabian_consulting_sales_chart">Tabian Consulting Sales Chart</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_out">Sign out</string>
    <string name="account_settings">Account Settings</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="fmtDate">MM/dd/yyyy</string>
    <string name="fmtTime">HH:mm:ss aa</string>
    <string name="fmtDateTime">MM/dd/yyyy HH:mm:ss aa</string>

    <string name="textview_from">From</string>
    <string name="textview_to">To</string>
    <string name="textview_dep_date">Departure Date</string>
    <string name="textview_dep_time">Time</string>

    <string name="keyCurrentUser">Key - Current User</string>


    <string name="textview_price">Price:</string>
    <string name="textview_total_seats">Total Seats:</string>
    <string name="textview_description">Description:</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_api"> AIzaSyC-ZHXyMbXzgBP_ch7XIdsoLh8LnJdv2bk</string>

    <string-array name="car_makers">
        <item>Alfa Romeo </item>
        <item>Aston Martin </item>
        <item>Audi</item>
        <item>Bentley </item>
        <item>Benz </item>
        <item>BMW </item>
        <item>Bugatti  </item>
        <item>Cadillac </item>
        <item>Chevrolet </item>
        <item>Chrysler </item>
        <item>Citroën </item>
        <item>Corvette  </item>
        <item>DAF </item>
        <item>Dacia </item>
        <item>Daewoo </item>
        <item>Daihatsu </item>
        <item>Datsun </item>
        <item>De Lorean </item>
        <item>Dino </item>
        <item>Dodge  </item>
        <item>Farboud </item>
        <item>Ferrari </item>
        <item>Fiat </item>
        <item>Ford</item>
        <item>Honda </item>
        <item>Hummer </item>
        <item>Hyundai</item>
        <item>Jaguar </item>
        <item>Jeep  </item>
        <item>KIA </item>
        <item>Koenigsegg  </item>
        <item>Lada </item>
        <item>Lamborghini </item>
        <item>Lancia </item>
        <item>Land Rover </item>
        <item>Lexus </item>
        <item>Ligier </item>
        <item>Lincoln </item>
        <item>Lotus  </item>
        <item>Martini </item>
        <item>Maserati </item>
        <item>Maybach </item>
        <item>Mazda </item>
        <item>McLaren </item>
        <item>Mercedes-Benz </item>
        <item>Mini </item>
        <item>Mitsubishi  </item>
        <item>Nissan </item>
        <item>Noble  </item>
        <item>Opel  </item>
        <item>Peugeot </item>
        <item>Pontiac </item>
        <item>Porsche  </item>
        <item>Renault </item>
        <item>Rolls-Royce  </item>
        <item>Saab </item>
        <item>Seat </item>
        <item>Škoda </item>
        <item>Smart </item>
        <item>Spyker  </item>
        <item>Subaru </item>
        <item>Suzuki  </item>
        <item>Toyota  </item>
        <item>Vauxhall </item>
        <item>Volkswagen </item>
        <item>Volvo</item>
    </string-array>

    <string name="keyOpenAlertDlg">Open Alert Dlg</string>
    <string name="notificationMessage1">Some body wants to book your ride, do you want to continue?</string>
    <string name="notificationMessage2">Your ride is confirmed.</string>
    <string name="notificationMessage3">Requested ride is not available.</string>
    <string name="rideRequester">Ride Request</string>
    <string name="rideConformer">Ride Conformer</string>
    <string name="notificationAPI">https://fcm.googleapis.com/fcm/send</string>
    <string name="serverKey">key=AAAAJMJ6N7A:APA91bGGwpQfeNcyB0OZxDHGeuWcgnYP_8L2mqNzuLsrkwMk_wULnUti9aTywRD1MgiyiTDOXr9_oZhPvhzbnme2CmQQLz58UzjHA05OgM3pu4QR463wFiZtP3vbQMmw23RnkCl7SRsS</string>
</resources>
